--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,23 +11,24 @@ publish_mode: editorial_workflow   # optional: draft → review → publish
 
 collections:
   - name: "popups"
-    label: "Popups"
+    label: "팝업"
     format: "json"
     files:
       - name: "site_popups"
-        label: "Popup List"
+        label: "팝업 목록"
         file: "data/popups.json"
         fields:
-          - { name: "items", label: "Items", widget: "list", collapsed: true, fields: [
-              { name: "enabled", label: "Enabled", widget: "boolean", default: true },
-              { name: "priority", label: "Priority", widget: "number", default: 10, value_type: "int" },
-              { name: "locale", label: "Locale", widget: "string", default: "ko", required: false },
-              { name: "title", label: "Title", widget: "string" },
-              { name: "body", label: "Body", widget: "text" },
-              { name: "btn_text", label: "Button Text", widget: "string", default: "지금 보기", required: false },
-              { name: "btn_url", label: "Button URL", widget: "string", required: false },
-              { name: "image", label: "Image", widget: "image", required: false },
-              { name: "start_date", label: "Start Date", widget: "date", format: "YYYY-MM-DD" },
-              { name: "end_date", label: "End Date", widget: "date", format: "YYYY-MM-DD" },
-              { name: "once_per_day", label: "Once per day", widget: "boolean", default: true }
+          - { name: "items", label: "항목", widget: "list", collapsed: true, fields: [
+              { name: "enabled", label: "사용 여부", widget: "boolean", default: true },
+              { name: "priority", label: "우선순위", widget: "number", default: 10, value_type: "int" },
+              { name: "locale", label: "언어 코드", widget: "string", default: "ko", required: false },
+              { name: "title", label: "제목", widget: "string" },
+              { name: "body", label: "본문 내용", widget: "text" },
+              { name: "btn_text", label: "버튼 텍스트", widget: "string", default: "지금 보기", required: false },
+              { name: "btn_url", label: "버튼 링크", widget: "string", required: false },
+              { name: "image", label: "이미지", widget: "image", required: false },
+              { name: "start_date", label: "시작일", widget: "date", format: "YYYY-MM-DD" },
+              { name: "end_date", label: "종료일", widget: "date", format: "YYYY-MM-DD" },
+              { name: "once_per_day", label: "하루 한 번만 표시", widget: "boolean", default: true }
           ] }
+
