--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,23 +12,21 @@ publish_mode: editorial_workflow   # optional: draft → review → publish
 collections:
   - name: "popups"
     label: "팝업"
+    folder: "content/popups"     # each popup saved as its own JSON file
+    create: true                 # allow “새 항목” button
     format: "json"
-    files:
-      - name: "site_popups"
-        label: "팝업 목록"
-        file: "data/popups.json"
-        fields:
-          - { name: "items", label: "항목", widget: "list", collapsed: true, fields: [
-              { name: "enabled", label: "사용 여부", widget: "boolean", default: true },
-              { name: "priority", label: "우선순위", widget: "number", default: 10, value_type: "int" },
-              { name: "locale", label: "언어 코드", widget: "string", default: "ko", required: false },
-              { name: "title", label: "제목", widget: "string" },
-              { name: "body", label: "본문 내용", widget: "text" },
-              { name: "btn_text", label: "버튼 텍스트", widget: "string", default: "지금 보기", required: false },
-              { name: "btn_url", label: "버튼 링크", widget: "string", required: false },
-              { name: "image", label: "이미지", widget: "image", required: false },
-              { name: "start_date", label: "시작일", widget: "date", format: "YYYY-MM-DD" },
-              { name: "end_date", label: "종료일", widget: "date", format: "YYYY-MM-DD" },
-              { name: "once_per_day", label: "하루 한 번만 표시", widget: "boolean", default: true }
-          ] }
+    slug: "{{title}}"
+    fields:
+      - { name: "enabled", label: "사용 여부", widget: "boolean", default: true }
+      - { name: "priority", label: "우선순위", widget: "number", default: 10 }
+      - { name: "locale", label: "언어 코드", widget: "string", default: "ko", required: false }
+      - { name: "title", label: "제목", widget: "string" }
+      - { name: "body", label: "본문 내용", widget: "text" }
+      - { name: "btn_text", label: "버튼 텍스트", widget: "string", default: "지금 보기", required: false }
+      - { name: "btn_url", label: "버튼 링크", widget: "string", required: false }
+      - { name: "image", label: "이미지", widget: "image", required: false }
+      - { name: "start_date", label: "시작일", widget: "date", format: "YYYY-MM-DD" }
+      - { name: "end_date", label: "종료일", widget: "date", format: "YYYY-MM-DD" }
+      - { name: "once_per_day", label: "하루 한 번만 표시", widget: "boolean", default: true }
+
 
